# jaldi-task-manager

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh  server.py
jaldi_task_manager/: __init__.py  config.py  db.py
jaldi_task_manager/db/models/: __init__.py  task.py  user.py
jaldi_task_manager/models/: __init__.py
jaldi_task_manager/web/: application.py  utils.py
jaldi_task_manager/web/api/auth/: schema.py  views.py
jaldi_task_manager/web/api/task/: schema.py  views.py
tests/: conftest.py  test_auth.py  test_tasks.py
