[tool.poetry]
name = "jaldi-task-manager"
version = "0.1.0"
description = ""
authors = ["Farhat Nawaz <fariharal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
pony = "^0.7.17"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
cryptography = "^41.0.7"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["fosit_ecommerce_store"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
