[tool.poetry]
name = "jaldi-task-manager"
version = "0.1.0"
description = ""
authors = ["Farhat Nawaz <fariharal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
pony = "^0.7.17"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
cryptography = "^41.0.7"
flask-pydantic = "^0.11.0"
flask-jwt-extended = "^4.6.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.1"
pre-commit = "^3.6.0"
black = "^23.12.0"
autoflake = "^2.2.1"
pyclean = "^2.7.6"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["jaldi_task_manager"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
